# ultimate-analysis

./: .gitignore  LICENSE  PLAN.md  README.md  easyocr_params.json  main.py  profile_main.py  profile_output.prof  pyproject.toml  requirements.txt  run_app.py  test_field_detection.py  test_field_projection.py  test_player_detection.py  test_player_number_detection.py  test_yolo_object_tracking.py  visualize_profile.py
.github/: copilot-instructions.md  promtps.md  tasksync.md
configs/: aerial_field_correction.yaml  default.yaml  development.yaml  easyocr_params.yaml  homography_params.yaml  homography_params_20250826_221151.yaml  processing.yaml  production.yaml  training.yaml  user.yaml
docs/: DEVELOPMENT_GUIDELINES.md  IMPLEMENTATION_TASKS.md  README.md
processing/: field_segmentation.py  ground_plane.py  inference.py  player_id.py  tracking.py
scripts/: benchmark.py  check_file_sizes.py  setup_environment.py
src/ultimate_analysis/: __init__.py  constants.py  main.py
src/ultimate_analysis/config/: __init__.py  constants.py  settings.py
src/ultimate_analysis/core/: __init__.py  exceptions.py  models.py  utils.py
src/ultimate_analysis/gui/: __init__.py  app.py  easyocr_tuning_tab.py  homography_tab.py  homography_tab_new.py  main_app.py  main_tab.py  main_window.py  model_tuning_tab.py  performance_widget.py  ransac_line_visualization.py  tracked_line_visualization.py  video_list_widget.py  video_player.py  video_widget.py  visualization.py
src/ultimate_analysis/gui/components/: __init__.py  runtime_dialog.py  (+1 more)
src/ultimate_analysis/optimization/: __init__.py  _homography_individual.py  _homography_metrics.py  homography_optimizer.py
src/ultimate_analysis/processing/: __init__.py  _inference_helpers.py  async_processor.py  contour_utils.py  field_analysis.py  field_coverage.py  field_mapping.py  field_projection.py  field_segmentation.py  field_types.py  ground_plane_estimation.py  image_preprocessing.py  inference.py  jersey_color.py  jersey_tracker.py  kalman_line_tracker.py  line_extraction.py  parallel_pipeline.py  particle_filter_homography.py  player_id.py  tracking.py
src/ultimate_analysis/training/: __init__.py  train_model_subprocess.py
src/ultimate_analysis/utils/: __init__.py  dataset_generation.py  logger.py  segmentation_utils.py  video_utils.py  visualization.py
tests/: __init__.py  conftest.py
tests/integration/: test_field_keypoint_detection.py  test_player_detection.py  test_player_number_detection.py  test_tracking.py  test_yolo_object_tracking.py
tests/unit/: test_core.py  test_gui.py  test_processing.py
utils/: dataset_generation.py
visu/: detection_visualisation.py  dev_runtimes_tab.py  dev_video_preprocessing_tab.py  dev_yolo_training_tab.py  easyocr_tuning_tab.py  field_segmentation_visualisation.py  main_tab.py  player_id_visualisation.py  settings_tab.py  tracking_visualisation.py  video_player.py  visualisation_app.py
(+29 files in other folders)
